myqtt: * [new] Added initial files to implement regression tests for PyMyQtt.   First test fully working (myqtt.AsyncQueue).

--- a/configure.ac
+++ b/configure.ac
@@ -411,6 +411,7 @@ server/modules/mod-status/Makefile
 server/modules/mod-status/mod-status.xml
 client/Makefile
 py-myqtt/Makefile
+py-myqtt/test/Makefile
 test/Makefile
 myqtt-1.0.pc
 myqtt-tls-1.0.pc
