--- a/py-myqtt/Makefile.am
+++ b/py-myqtt/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS = . test
+
 EXTRA_DIST=__init__.py tls.py
 
 if ENABLE_PY_MYQTT_LOG
@@ -5,7 +7,7 @@ INCLUDE_PY_MYQTT_LOG=-DENABLE_PY_MYQTT_LOG
 endif
 
 # if ENABLE_TLS_SUPPORT
-# tls_lib=libpy_myqtt_tls_11.la
+# tls_lib=libpy_myqtt_tls_10.la
 # tls_includes=-I$(top_srcdir)/tls
 # endif
 
@@ -14,10 +16,10 @@ INCLUDES = $(compiler_options) -DCOMPILATION_DATE=`date +%s` -D__COMPILING_MYQTT
 	   -DSYSCONFDIR=\""$(sysconfdir)"\" -DDEFINE_CHROOT_PROTO -DDEFINE_KILL_PROTO -DDEFINE_MKSTEMP_PROTO \
 	   $(AXL_CFLAGS)  -g -Wall -Werror -Wstrict-prototypes $(PYTHON_CFLAGS) $(INCLUDE_PY_MYQTT_LOG)
 
-lib_LTLIBRARIES    = libpy_myqtt_11.la $(tls_lib) 
+lib_LTLIBRARIES    = libpy_myqtt_10.la $(tls_lib) 
 
-# libpy_myqtt_11.la
-libpy_myqtt_11_la_include_HEADERS  = \
+# libpy_myqtt_10.la
+libpy_myqtt_10_la_include_HEADERS  = \
 	py_myqtt.h \
 	py_myqtt_handle.h \
 	py_myqtt_ctx.h \
@@ -25,7 +27,7 @@ libpy_myqtt_11_la_include_HEADERS  = \
 	py_myqtt_async_queue.h \
 	py_myqtt_msg.h
 
-libpy_myqtt_11_la_SOURCES  = \
+libpy_myqtt_10_la_SOURCES  = \
 	py_myqtt.c \
 	py_myqtt_handle.c \
 	py_myqtt_ctx.c \
@@ -33,21 +35,21 @@ libpy_myqtt_11_la_SOURCES  = \
 	py_myqtt_async_queue.c \
 	py_myqtt_msg.c
 
-libpy_myqtt_11_la_LDFLAGS  = $(PYTHON_LIBS) $(top_srcdir)/lib/libmyqtt-1.0.la $(AXL_LIBS)
-libpy_myqtt_11_la_includedir = $(includedir)/py_myqtt
+libpy_myqtt_10_la_LDFLAGS  = $(PYTHON_LIBS) $(top_srcdir)/lib/libmyqtt-1.0.la $(AXL_LIBS)
+libpy_myqtt_10_la_includedir = $(includedir)/py_myqtt
 
-libpy_myqtt_11_la_LIBADD = $(AXL_LIBS) $(PTHREAD_LIBS) $(ADDITIONAL_LIBS)
+libpy_myqtt_10_la_LIBADD = $(AXL_LIBS) $(PTHREAD_LIBS) $(ADDITIONAL_LIBS)
 
 # if ENABLE_TLS_SUPPORT
-# libpy_myqtt_tls_11.la
-# libpy_myqtt_tls_11_la_include_HEADERS = \
+# libpy_myqtt_tls_10.la
+# libpy_myqtt_tls_10_la_include_HEADERS = \
 # 	py_myqtt_tls.h
-# libpy_myqtt_tls_11_la_SOURCES = \
+# libpy_myqtt_tls_10_la_SOURCES = \
 # 	py_myqtt_tls.c
-# libpy_myqtt_tls_11_la_LDFLAGS  = $(PYTHON_LIBS) $(top_srcdir)/src/libmyqtt-1.1.la $(top_srcdir)/tls/libmyqtt-tls-1.1.la $(AXL_LIBS) libpy_myqtt_11.la
-# libpy_myqtt_tls_11_la_includedir = $(includedir)/py_myqtt
+# libpy_myqtt_tls_10_la_LDFLAGS  = $(PYTHON_LIBS) $(top_srcdir)/src/libmyqtt-1.1.la $(top_srcdir)/tls/libmyqtt-tls-1.1.la $(AXL_LIBS) libpy_myqtt_10.la
+# libpy_myqtt_tls_10_la_includedir = $(includedir)/py_myqtt
 # 
-# libpy_myqtt_tls_11_la_LIBADD = $(AXL_LIBS) $(PTHREAD_LIBS) $(ADDITIONAL_LIBS)
+# libpy_myqtt_tls_10_la_LIBADD = $(AXL_LIBS) $(PTHREAD_LIBS) $(ADDITIONAL_LIBS)
 # endif
 
 libdir = ${pythondir}/myqtt
