myqtt: * [new] Finished conn.sub support for PyMyQtt. Finished regression test   to check it is working. Added initial files to document PyMyQtt

--- a/configure.ac
+++ b/configure.ac
@@ -412,6 +412,8 @@ server/modules/mod-status/mod-status.xml
 client/Makefile
 py-myqtt/Makefile
 py-myqtt/test/Makefile
+py-myqtt/doc/Makefile
+py-myqtt/doc/conf.py
 test/Makefile
 myqtt-1.0.pc
 myqtt-tls-1.0.pc
