myqtt: * [fix] Added initial working code for PyMyQtt to support client TLS.   Added regression test (test_18) to check its function. Still needed   support for server side.

--- a/py-myqtt/Makefile.am
+++ b/py-myqtt/Makefile.am
@@ -6,13 +6,13 @@ if ENABLE_PY_MYQTT_LOG
 INCLUDE_PY_MYQTT_LOG=-DENABLE_PY_MYQTT_LOG
 endif
 
-# if ENABLE_TLS_SUPPORT
-# tls_lib=libpy_myqtt_tls_10.la
-# tls_includes=-I$(top_srcdir)/tls
-# endif
+if ENABLE_TLS_SUPPORT
+tls_lib=libpy_myqtt_tls_10.la
+tls_includes=-I$(top_srcdir)/tls
+endif
 
 INCLUDES = $(compiler_options) -DCOMPILATION_DATE=`date +%s` -D__COMPILING_MYQTTD__   \
-	   -DMYQTT_VERSION=\"$(MYQTT_VERSION)\" -DVERSION=\"$(MYQTT_VERSION)\" -I$(top_srcdir)/lib \
+	   -DMYQTT_VERSION=\"$(MYQTT_VERSION)\" -DVERSION=\"$(MYQTT_VERSION)\" -I$(top_srcdir)/lib -I$(top_srcdir)/tls \
 	   -DSYSCONFDIR=\""$(sysconfdir)"\" -DDEFINE_CHROOT_PROTO -DDEFINE_KILL_PROTO -DDEFINE_MKSTEMP_PROTO \
 	   $(AXL_CFLAGS)  -g -Wall -Werror -Wstrict-prototypes $(PYTHON_CFLAGS) $(INCLUDE_PY_MYQTT_LOG)
 
@@ -42,17 +42,17 @@ libpy_myqtt_10_la_includedir = $(includedir)/py_myqtt
 
 libpy_myqtt_10_la_LIBADD = $(AXL_LIBS) $(PTHREAD_LIBS) $(ADDITIONAL_LIBS)
 
-# if ENABLE_TLS_SUPPORT
+if ENABLE_TLS_SUPPORT
 # libpy_myqtt_tls_10.la
-# libpy_myqtt_tls_10_la_include_HEADERS = \
-# 	py_myqtt_tls.h
-# libpy_myqtt_tls_10_la_SOURCES = \
-# 	py_myqtt_tls.c
-# libpy_myqtt_tls_10_la_LDFLAGS  = $(PYTHON_LIBS) $(top_srcdir)/src/libmyqtt-1.1.la $(top_srcdir)/tls/libmyqtt-tls-1.1.la $(AXL_LIBS) libpy_myqtt_10.la
-# libpy_myqtt_tls_10_la_includedir = $(includedir)/py_myqtt
-# 
-# libpy_myqtt_tls_10_la_LIBADD = $(AXL_LIBS) $(PTHREAD_LIBS) $(ADDITIONAL_LIBS)
-# endif
+libpy_myqtt_tls_10_la_include_HEADERS = \
+	py_myqtt_tls.h
+libpy_myqtt_tls_10_la_SOURCES = \
+	py_myqtt_tls.c
+libpy_myqtt_tls_10_la_LDFLAGS  = $(PYTHON_LIBS) $(top_srcdir)/lib/libmyqtt-1.0.la $(top_srcdir)/tls/libmyqtt-tls-1.0.la $(AXL_LIBS) libpy_myqtt_10.la
+libpy_myqtt_tls_10_la_includedir = $(includedir)/py_myqtt
+
+libpy_myqtt_tls_10_la_LIBADD = $(AXL_LIBS) $(PTHREAD_LIBS) $(ADDITIONAL_LIBS)
+endif
 
 libdir = ${pythondir}/myqtt
 
