--- a/server/test_02.conf
+++ b/server/test_02.conf
@@ -104,6 +104,7 @@
            memory while providing a name will cause the module to be
            loaded and then checked its name. -->
       <module name="mod-skipped" />
+      <module name="mod-ssl" />
     </no-load>
   </modules>
 
@@ -138,7 +139,7 @@
       <!-- now group of settings -->
       <!-- settings for basic domains -->
       <domain-setting name="basic">
-	<conn-limit value="5" /> <!-- amount of concurrent connections -->
+	<conn-limit value="50" /> <!-- amount of concurrent connections -->
 	<message-size-limit value="256" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
 	<storage-messages-limit value="10000" /> <!-- max amount of messages in storage, use -1 for no limits -->
 	<storage-quota-limit value="102400" /> <!-- max amount of space used (100MB) -->
