--- a/server/modules/Makefile.am
+++ b/server/modules/Makefile.am
@@ -6,7 +6,7 @@ if ENABLE_WEBSOCKET_SUPPORT
 WEBSOCKET_SUPPORT_DIR = mod-web-socket
 endif
 
-SUBDIRS = mod-auth-xml $(TLS_SUPPORT_DIR) $(WEBSOCKET_SUPPORT_DIR) mod-status
+SUBDIRS = mod-auth-xml $(TLS_SUPPORT_DIR) $(WEBSOCKET_SUPPORT_DIR) mod-status mod-test
 
 install-exec-hook:
 	mkdir -p $(sysconfdir)/myqtt/mods-enabled
