--- a/doc/myqtt.doxygen.in
+++ b/doc/myqtt.doxygen.in
@@ -756,7 +756,9 @@ WARN_LOGFILE           =
 
 INPUT                  = @top_srcdir@/server/myqttd.c \
                          @top_srcdir@/server \
-                         @top_srcdir@/lib
+                         @top_srcdir@/lib \
+                         @top_srcdir@/tls \
+                         @top_srcdir@/web-socket
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
