--- a/server/myqtt.example.conf
+++ b/server/myqtt.example.conf
@@ -6,8 +6,10 @@
     <!-- port allocation configuration -->
     <ports>
       <!-- <port [bind-addr='0.0.0.0'] [proto='mqtt']>__port_num__</port> -->
-      <port>1883</port> <!-- iana registered port for plain MQTT -->
-      <port>8883</port> <!-- iana registered port for TLS MQTT -->
+      <port proto="mqtt">1883</port> <!-- iana registered port for plain MQTT -->
+      <port proto="mqtt-tls">8883</port> <!-- iana registered port for TLS MQTT -->
+      <!-- <port proto="mqtt-ws">80</port>  --> <!-- declaration for MQTT over WebSocket -->
+      <!-- <port proto="mqtt-wss">443</port>  --> <!-- declaration for MQTT over TLS/SSL WebSocket -->
     </ports>
 
     <!-- log reporting configuration -->
