--- a/doc/myqtt.doxygen.in
+++ b/doc/myqtt.doxygen.in
@@ -754,7 +754,7 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @top_srcdir@/server/myqttd.c \
+INPUT                  = @top_srcdir@/lib/myqtt.c @top_srcdir@/server/myqttd.c \
                          @top_srcdir@/server \
                          @top_srcdir@/lib \
                          @top_srcdir@/tls \
