--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -1,10 +1,5 @@
 EXTRA_DIST = 
 
-# profile a flag to enable the source to code to react agaisnt the
-# pcre inclusion.
-if ENABLE_PCRE_SUPPORT
-INCLUDE_PCRE_SUPPORT=-DENABLE_PCRE_SUPPORT
-endif
 
 if ENABLE_TLS_SUPPORT
 INCLUDE_TLS_FLAGS=-DENABLE_TLS_SUPPORT $(TLS_CFLAGS) -I$(top_srcdir)/tls
@@ -19,7 +14,7 @@ endif
 INCLUDES = $(compiler_options) -DCOMPILATION_DATE=`date +%s` -D__COMPILING_MYQTTD__ -D_POSIX_C_SOURCE  \
 	   -DMYQTT_VERSION=\"$(MYQTT_VERSION)\" -DVERSION=\"$(MYQTT_VERSION)\" -DAXL_VERSION=\"$(AXL_VERSION)\" -I$(top_srcdir)/lib \
 	   -DSYSCONFDIR=\""$(sysconfdir)"\" -DDEFINE_CHROOT_PROTO -DDEFINE_KILL_PROTO -DDEFINE_MKSTEMP_PROTO \
-	   $(INCLUDE_PCRE_SUPPORT) $(PCRE_CFLAGS) $(INCLUDE_TERMIOS) $(EXARG_FLAGS) \
+	   $(INCLUDE_TERMIOS) $(EXARG_FLAGS) \
 	   $(AXL_CFLAGS)  -g -Wall -Werror -Wstrict-prototypes $(INCLUDE_TLS_FLAGS) $(INCLUDE_WEBSOCKET_FLAGS)
 
 bin_PROGRAMS = myqtt-client 
