myqtt: * [fix] Added code to allow configuring a handler that will be called when   a subscription is received, allowing to reconfigure QoS accepted or simply   deny subscription request received. API added:
  - myqtt_ctx_set_on_subscribe

--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -5,7 +5,8 @@ EXTRA_DIST = myqttd-ctx-private.h \
 	test_02.conf \
 	test_10.conf \
 	test_12.conf \
-	test_15.conf
+	test_15.conf \
+	test_16.conf
 
 etcdir = $(sysconfdir)/myqtt
 etc_DATA = myqtt.example.conf
