--- a/server/test_02.conf
+++ b/server/test_02.conf
@@ -123,16 +123,16 @@
 	       database: yes (restrict), no (allow using any client id)
 	  -->
 	  <restrict-ids value="yes" />
-	  <!-- disconnect previous connection if a new connection with
-	       same client_id is received. According to MQTT standard
-	       ([MQTT-3.1.4-2], page 12, section 3.1.4 response, it
-	       states that by default the server must disconnect
-	       previous connection in the case same client id is
-	       found. However, this may pose a security flaw. By
-	       default this is disabled. If nothing is configured, by
-	       default is disabled. To drop current connection,
-	       replacing it with new incoming connection with same id,
-	       use value="yes" -->
+	  <!-- NON-STANDARD WARNING: disconnect previous connection if
+	       a new connection with same client_id is
+	       received. According to MQTT standard ([MQTT-3.1.4-2],
+	       page 12, section 3.1.4 response, it states that by
+	       default the server must disconnect previous connection
+	       in the case same client id is found. However, this may
+	       pose a security flaw. By default this is disabled. If
+	       nothing is configured, by default is disabled. To drop
+	       current connection, replacing it with new incoming
+	       connection with same id, use value="yes" -->
 	  <drop-conn-same-client-id value="no" />
       </global-settings>
 
