--- a/server/test_16.conf
+++ b/server/test_16.conf
@@ -5,11 +5,8 @@
   <global-settings>
     <!-- port allocation configuration -->
     <ports>
-      <!-- <port [bind-addr='0.0.0.0'] [proto='mqtt']>__port_num__</port> -->
-      <port proto="mqtt">1883</port> <!-- iana registered port for plain MQTT -->
-      <port proto="mqtt-tls">8883</port> <!-- iana registered port for TLS MQTT -->
-      <!-- <port proto="mqtt-ws">80</port>  --> <!-- declaration for MQTT over WebSocket -->
-      <!-- <port proto="mqtt-wss">443</port>  --> <!-- declaration for MQTT over TLS/SSL WebSocket -->
+      <port>1883</port> <!-- iana registered port for plain MQTT -->
+      <port>8883</port> <!-- iana registered port for TLS MQTT -->
     </ports>
 
     <!-- log reporting configuration -->
@@ -90,23 +87,12 @@
 
     <running-user uid="myqttd" gid="myqttd" />
 
-    <system-paths>
-      <!-- override runtime-datadir configuration: by default /var/lib -->
-      <!-- <path name="runtime_datadir" value="/var/lib" /> -->
-
-      <!-- override runtime-datadir configuration: by default /etc -->
-      <!-- <path name="sysconfdir" value="/etc" /> -->
-
-      <!-- override datadir configuration: by default /usr/share -->
-      <!-- <path name="datadir" value="/usr/share" /> -->
-    </system-paths>
-
   </global-settings>
 
   <modules>
     
     <!-- directory where to find modules to load -->
-    <directory src="/etc/myqtt/mods-enabled" /> 
+    <directory src="reg-test-01/modules" /> 
     <!-- alternative directory -->
     <!-- <directory src="../mods-enabled" />  -->
     <no-load>
@@ -121,73 +107,33 @@
     </no-load>
   </modules>
 
-  <!-- the following allows to group configuration settings into
-       groups that then can be applied to domains. Each configuration
-       setting is identified by a <domain-setting> node. Then, the
-       node <global-settings> includes global settings that are
-       configured to all domain-setting nodes unless they say
-       something about. -->
-  <domain-settings>
+  <!-- myqtt domains: list of group of myqtt users/devices we accept
+       for this server and how they are groupped and assigned to an
+       specific running user -->
+  <myqtt-domains>
       <global-settings>
-          <!-- require authentication: yes, so valid username/password is
-	       required, no: anonymous connection is allowed -->
-	  <require-auth value="yes" />
-	  <!-- force clients to have a registered id recognized by the
-	       database: yes (restrict), no (allow using any client id)
-	  -->
-	  <restrict-ids value="yes" />
-	  <!-- NON-STANDARD WARNING: disconnect previous connection if
-	       a new connection with same client_id is
-	       received. According to MQTT standard ([MQTT-3.1.4-2],
-	       page 12, section 3.1.4 response, it states that by
-	       default the server must disconnect previous connection
-	       in the case same client id is found. However, this may
-	       pose a security flaw. By default this is disabled. If
-	       nothing is configured, by default is disabled. To drop
-	       current connection, replacing it with new incoming
-	       connection with same id, use value="yes" -->
-	  <drop-conn-same-client-id value="no" />
 	  <!-- disable wildcard subscription globally: the following
 	       setting allows to disable any operation that involes a
 	       wildcarid topic filter. This allows to reduce overhead
 	       provided by these operations, forcing the particular
 	       design that only uses non-wildcard topics to be
 	       followed.   -->
-	  <disable-wild-card-support value="no" />
+	  <disable-wild-card-support value="yes" />
       </global-settings>
-
-      <!-- now group of settings -->
-      <!-- settings for basic domains -->
-      <domain-setting name="basic">
-	<conn-limit value="5" /> <!-- amount of concurrent connections -->
-	<message-size-limit value="32768" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
-	<storage-messages-limit value="10000" /> <!-- max amount of messages in storage, use -1 for no limits -->
-	<storage-quota-limit value="102400" /> <!-- max amount of space used (100MB) -->
-      </domain-setting>
-      
-      <!-- settings for standard domains -->
-      <domain-setting name="standard">
-      	<conn-limit value="10" /> <!-- amount of concurrent connections -->
-	<message-size-limit value="65536" /> <!-- 32k max message size allowed, use -1 for no limits (256MB) -->
-	<storage-messages-limit value="20000" /> <!-- max amount of messages in storage, use -1 for no limits -->
-	<storage-quota-limit value="204800" /> <!-- max amount of space used (200MB), value in KB -->
-      </domain-setting>
-  </domain-settings>
-
-
-  <!-- myqtt domains: list of group of myqtt users/devices we accept
-       for this server and how they are groupped and assigned to an
-       specific running user -->
-  <myqtt-domains>
 
     <!-- simple declaration for a domain with a set of users
          (users-db) and where it is storing messages in transit
          (storage) -->
-    <domain name="example.com" storage="/var/lib/myqtt/example.com" users-db="/var/lib/myqtt-dbs/example.com" use-settings="basic" />
-    
-    <!-- include more domain declarations from the following directory -->
-    <include dir="/etc/myqtt/domains.d/" />
+    <domain name="test_01.context" 
+	    storage="reg-test-01/storage" 
+	    users-db="reg-test-01/users">
+      <!-- require authentication: yes, so valid username/password is required, no: anonymous connection is allowed -->
+      <require-auth value="yes" />
+      <!-- force clients to have a registered id recognized by the database: yes (restrict), no (allow using any client id) -->
+      <restrict-ids value="yes" />
+      <!-- domain specific settings -->
+    </domain>
 
   </myqtt-domains>
-
+  
 </myqtt>
