myqtt: * [new] Updated MyQttD to support disabling wildcard subscription   globally or by domain. Added reg test (test_16) to check support   added. Nice!

--- a/server/test_16.conf
+++ b/server/test_16.conf
@@ -107,10 +107,7 @@
     </no-load>
   </modules>
 
-  <!-- myqtt domains: list of group of myqtt users/devices we accept
-       for this server and how they are groupped and assigned to an
-       specific running user -->
-  <myqtt-domains>
+  <domain-settings>
       <global-settings>
 	  <!-- disable wildcard subscription globally: the following
 	       setting allows to disable any operation that involes a
@@ -118,8 +115,14 @@
 	       provided by these operations, forcing the particular
 	       design that only uses non-wildcard topics to be
 	       followed.   -->
-	  <disable-wild-card-support value="yes" />
+	  <disable-wildcard-support value="yes" />
       </global-settings>
+  </domain-settings>
+
+  <!-- myqtt domains: list of group of myqtt users/devices we accept
+       for this server and how they are groupped and assigned to an
+       specific running user -->
+  <myqtt-domains>
 
     <!-- simple declaration for a domain with a set of users
          (users-db) and where it is storing messages in transit
@@ -127,11 +130,6 @@
     <domain name="test_01.context" 
 	    storage="reg-test-01/storage" 
 	    users-db="reg-test-01/users">
-      <!-- require authentication: yes, so valid username/password is required, no: anonymous connection is allowed -->
-      <require-auth value="yes" />
-      <!-- force clients to have a registered id recognized by the database: yes (restrict), no (allow using any client id) -->
-      <restrict-ids value="yes" />
-      <!-- domain specific settings -->
     </domain>
 
   </myqtt-domains>
